Fixes overflow on dashboard campaign container

--- a/client/app/main/dashboard/dashboard.scss
+++ b/client/app/main/dashboard/dashboard.scss
@@ -3,13 +3,13 @@
     .text-right                   { padding-right: 0; }
   }
   .shadowed-container             { margin-bottom: 30px; position: relative;
-    &.campaigns                   {
-      .th                         {
-        &:nth-child(1)            { width: 45%; }
-        &:nth-child(2)            { width: 40%; }
-        &:nth-child(3)            { width: 15%; }
-      }
-    }
+    // &.campaigns                   {
+    //   .th                         {
+    //     &:nth-child(1)            { width: 45%; }
+    //     &:nth-child(2)            { width: 40%; }
+    //     &:nth-child(3)            { width: 15%; }
+    //   }
+    // }
     &.updates                     {
       .th                         {
         &:nth-child(1)            { width: 30%; }
